Fix countries tab at 50%, slight overflow

--- a/src/pages/continent.css
+++ b/src/pages/continent.css
@@ -19,11 +19,15 @@
   min-height: 140px;
   justify-content: space-between;
   align-items: flex-start;
+  text-align: left;
   padding: 1rem;
 }
 
+.country.tab h2 {
+  margin: 0;
+}
+
 .info.block {
-  /* margin-right: 1rem; */
   text-align: right;
 }
 
